Card border text overlap issue fixes

--- a/src/app/llm-hub/llm-hub.component.scss
+++ b/src/app/llm-hub/llm-hub.component.scss
@@ -18,7 +18,7 @@
     width: 300px;
     height: 216px;
     box-shadow: 0px 10px 20px #5A5A5A2F;
-    border: 1px solid #F0F3FF;
+    border: 1px solid #E8EDFF;
     border-radius: 7px;
     padding: 25px;
     text-align: center;
