--- a/src/app/market-place/market-place.component.scss
+++ b/src/app/market-place/market-place.component.scss
@@ -19,7 +19,7 @@
     width: 297px;
     min-height: 315px;
     box-shadow: 0px 10px 20px #5A5A5A2F;
-    border: 1px solid #F0F3FF;
+    border: 1px solid #E8EDFF;
     border-radius: 7px;
     margin-bottom: 30px;
     // display: table-cell;
@@ -34,7 +34,7 @@
         border-top-left-radius: 7px;
         border-top-right-radius: 7px;
         // box-shadow: 0px 15px 10px -18px #7a7a7a;
-        border-bottom: 1px solid #F0F3FF;
+        border-bottom: 1px solid #E8EDFF;
         img{
             max-height: 90px;
             max-width: 100%;
