--- a/src/app/market-place/product-detail/product-detail.component.scss
+++ b/src/app/market-place/product-detail/product-detail.component.scss
@@ -5,9 +5,9 @@
 .details-page {
     background: url("../../../assets/images/marketplace/marketplace-detail-bg-pattern.svg") no-repeat, linear-gradient(258deg, #421F90 0%, #4C3176 53%, #C61B9F 100%) 0% 0% no-repeat;
     width: 100%;
-    height: 383px;
-    color: $white;
-    padding-top: 80px;
+    min-height: 383px;
+    color: #fff;
+    padding: 80px 0 40px;
 }
 .play-button {
     top: calc(50% - 25px);
