--- a/src/app/research-papers/research-papers.component.scss
+++ b/src/app/research-papers/research-papers.component.scss
@@ -3,7 +3,7 @@
 
 .research-papers-card {
   cursor: pointer;
-  border: 1px solid #F0F3FF;
+  border: 1px solid #E8EDFF;
   border-radius: 4px;
   height: 340px;
   .bookmark-icon-animated {
