--- a/src/app/tekbyte/tekbyte-page.component.scss
+++ b/src/app/tekbyte/tekbyte-page.component.scss
@@ -10,7 +10,7 @@
     margin: 0px 40px 25px 0px;
     display: inline-block;
     text-align: left;
-    border: 1px solid #F0F3FF;
+    border: 1px solid #E8EDFF;
     background-color: $white;
     cursor: pointer;
     .card-top {
