--- a/src/app/video-library/video-library.component.scss
+++ b/src/app/video-library/video-library.component.scss
@@ -8,7 +8,7 @@
 }
 .video-library-card {
   cursor: pointer;
-  border: 1px solid #F0F3FF;
+  border: 1px solid #E8EDFF;
   border-radius: 5px;
   height: 375px;
   .video_thumb {
