--- a/src/app/weekly-digest/weekly-digest.component.scss
+++ b/src/app/weekly-digest/weekly-digest.component.scss
@@ -15,7 +15,7 @@
   display: inline-grid;
   text-align: left;
   color: #1C1C1C;
-  border: 1px solid #F0F3FF;
+  border: 1px solid #E8EDFF;
   background-repeat: no-repeat;
   background-size: contain;
   &.indigo-purple {
@@ -32,7 +32,7 @@
   .content-top {
     height: 113px;
     margin-bottom: 10px;
-    border-bottom: 1px solid #F0F3FF;
+    border-bottom: 1px solid #E8EDFF;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
